# dropout_prediction

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
docker/: Dockerfile  extension.txt  requirements.txt
docker/requirements/: light.txt
docker/scripts/: install.sh  train.sh
scripts/: deploy.sh  run_ui.sh
src/: cli_servers.py  config.py  health_check.py  preprocessing.py  train_model.py
src/tools/: serve_model.py  serve_ui.py
