[project]
name = "dropout-prediction"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "mlflow>=3.10.1",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.2.0",
]

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (errors)
    "UP",  # pyupgrade (modernize code for newer Python)
    "B",   # flake8-bugbear (common bugs and security issues)
    "SIM", # flake8-simplify (simplify code)
    "I",   # isort (import sorting),
    "W",
    "C901"
]
ignore = []

[project.scripts]
train-model = "train_model:train"
serve-model = "cli_servers:serve_model"
serve-ui = "cli_servers:serve_ui"
health-check = "health_check:main"
